--- a/.gitignore
+++ b/.gitignore
@@ -1,100 +1,63 @@
-# ========================================
-# Claude & AI Development Related
-# ========================================
-# Private/Local communications with Claude
-claude-knowledge/
-local-communications/
-CLAUDE.md
-claude-*.md
-*-claude.md
-.claude/
-claude-sessions/
-ai-prompts/
-prompt-templates/
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
 
-# Local AI model files
-models/
-*.onnx
-*.bin
-*.safetensors
+# Virtual environments
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+.venv/
 
-# ========================================
-# Personal Development Files
-# ========================================
-# Personal notes and TODO
-TODO.md
-NOTES.md
-IDEAS.md
-personal-notes/
-my-notes/
-scratch/
-playground/
-experiments/
-*.personal
-*.private
-*.local
-
-# Development drafts
-drafts/
-draft-*
-*-draft.*
-WIP-*
-*-WIP.*
-
-# ========================================
-# Local Configuration & Secrets
-# ========================================
-# Environment and secrets
+# Environment files
 .env
-.env.*
-!.env.example
-secrets/
-credentials/
-api-keys/
-*.key
-*.pem
-*.cert
+.env.local
+.env.production
+config/.env
 
-# Local configuration overrides
-config.local.*
-*.local.yml
-*.local.yaml
-*.local.json
-local-config/
-my-config/
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 
-# ========================================
-# Development & Testing
-# ========================================
-# Test data and outputs
-test-data/
-test-outputs/
-test-results/
-temp/
-tmp/
-*.tmp
-*.temp
-sandbox/
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
-# Local database files
-*.db
-*.sqlite
-*.sqlite3
-local-db/
-db-backups/
-
-# Debug and logs
+# Docker
 *.log
-logs/
-debug/
-*.debug
-debug-outputs/
-performance-logs/
+docker-compose.override.yml
+.dockerignore
 
-# ========================================
-# Media & Large Files
-# ========================================
-# Generated content
+# Data directories
 data/audio/*
 data/video/*
 data/metadata/*
@@ -102,96 +65,157 @@ data/metadata/*
 !data/video/.gitkeep
 !data/metadata/.gitkeep
 
-# Media work files
-*.mp4
-*.mp3
-*.wav
-*.avi
-*.mov
-raw-media/
-work-in-progress/
-renders/
+# Database
+*.db
+*.sqlite
+*.sqlite3
 
-# ========================================
-# Backup & Archive
-# ========================================
-backup/
-backups/
-archive/
-old/
-deprecated/
-*.backup
-*.bak
-*.old
-
-# ========================================
-# Development Tools
-# ========================================
-# IDE and editors
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-.project
-.settings/
-*.sublime-*
-
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-env/
-venv/
-.venv/
-pip-log.txt
-.pytest_cache/
-.coverage
-htmlcov/
-*.egg-info/
-
-# Node.js
-node_modules/
+# Logs
+logs/
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# nyc test coverage
+.nyc_output
+
+# node_modules
+node_modules/
+
+# Optional npm cache directory
 .npm
-.yarn
 
-# Docker
-docker-compose.override.yml
-docker-compose.local.yml
-.docker/
+# Optional eslint cache
+.eslintcache
 
-# ========================================
-# OS Generated Files
-# ========================================
-# macOS
-.DS_Store
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# Dependency directories
+jspm_packages/
+
+# Snowpack dependency directory (https://snowpack.dev/)
+web_modules/
+
+# TypeScript cache
+*.tsbuildinfo
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
+.env.test
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# Nuxt.js build / generate output
+.nuxt
+dist
+
+# Gatsby files
+.cache/
+public
+
+# Storybook build outputs
+.out
+.storybook-out
+
+# Temporary folders
+tmp/
+temp/
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Backup files
+*.bak
+*.backup
+
+# Model files (can be large)
+models/*.onnx
+models/*.bin
+models/*.safetensors
+
+# Generated files
+src/generator/alembic/versions/*.py
+!src/generator/alembic/versions/__init__.py
+
+# Test artifacts
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+
+# Documentation builds
+docs/_build/
+site/
+
+# MacOS
 .AppleDouble
 .LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
 ._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
 .Spotlight-V100
+.TemporaryItems
 .Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
 
-# Windows
-Thumbs.db
-ehthumbs.db
-Desktop.ini
-$RECYCLE.BIN/
-*.lnk
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
 
-# Linux
-.directory
-.Trash-*
+# Local development
+local-communications/api-keys.txt
+local-communications/secrets.txt
 
-# ========================================
-# Build & Distribution
-# ========================================
-build/
-dist/
-out/
-target/
-*.egg
+# Sensitive files
+*.pem
+*.key
+*.crt
+*.p12
+*.pfx
+
+# Backup directories
+backup/
+backups/
